--- a/site/css/menu.css
+++ b/site/css/menu.css
@@ -1,29 +1,36 @@
-
-*{
+* {
     margin: 0;
     padding: 0;
 }
-:root{
-    --cor-principal: #4d6de3;
-    --cor-secundaria:#232323;
+
+:root {
+    --cor-principal: #0f0fd8;
+    --cor-secundaria: #232323;
+    --cor-terciaria: #8080ffff;
+    --cor-quartenaria: #0066ffff;
+
 }
-.logo{
+
+.logo {
     padding: 0 20px;
-    
+
 }
-.logo img{
-    width: 100px;
+
+.logo img {
+    width: 80px;
 }
-.menu{
+
+.menu {
     position: fixed;
     width: 100%;
     height: 100px;
     color: white;
-    background:var(--cor-secundaria);
+    background: var(--cor-secundaria);
     border-bottom: 5px solid var(--cor-principal);
 
 }
-.menu ul{
+
+.menu ul {
     display: flex;
     width: 100%;
     height: 100%;
@@ -32,15 +39,17 @@
     align-items: center;
 
 }
-a{
+
+a {
     text-decoration: none;
     color: white;
-    font-size:20px;
+    font-size: 20px;
     text-transform: uppercase;
     padding: 20px;
 }
-a:hover{
+
+a:hover {
     border-radius: 20px;
-    background:var(--cor-principal);
+    background: var(--cor-quartenaria);
     transition-duration: 1s;
 }
