--- a/site/css/menu.css
+++ b/site/css/menu.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
 * {
     margin: 0;
     padding: 0;
+    
 }
 
 :root {
@@ -17,7 +19,7 @@
 }
 
 .logo img {
-    width: 80px;
+    width: 60px;
 }
 
 .menu {
@@ -27,6 +29,7 @@
     color: white;
     background: var(--cor-secundaria);
     border-bottom: 5px solid var(--cor-principal);
+    z-index: 1;
 
 }
 
@@ -40,12 +43,13 @@
 
 }
 
-a {
+.menu a {
     text-decoration: none;
     color: white;
-    font-size: 20px;
+    font-size: 15px;
     text-transform: uppercase;
     padding: 20px;
+    font-family: 'Krona One', sans-serif;
 }
 
 a:hover {
@@ -53,3 +57,88 @@ a:hover {
     background: var(--cor-quartenaria);
     transition-duration: 1s;
 }
+/*Footer (Rodapé)*/
+.footer {
+    border-top: 5px solid var(--cor-principal);
+    background-color: var(--cor-secundaria);
+    color: white;
+    height: 285px;
+    position: relative;
+    z-index: -1;
+}
+
+.footer .footer-content {
+    height: 240px;
+    display: flex;
+}
+
+.footer .footer-content .footer-section {
+    flex: 1;
+}
+
+.footer .footer-content {
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin-left: -47px;
+    /* margin-right: 8px; */
+}
+
+.footer .footer-content img {
+    width: 85px;
+    margin-bottom: 10px;
+}
+
+/* Footer | Localização */
+
+.footer .footer-content .location p {
+    font-size: 15px;
+}
+
+.footer .footer-content .mind {
+    padding-top: 10px;
+
+}
+
+.footer .footer-content .mind span {
+    color: var(--cor-principal);
+    font-weight: bold;
+}
+
+/* Footer | Siga-nos */
+.footer .footer-content .footer-section .redes-social {
+    letter-spacing: 10px;
+
+    font-size: 30px;
+    margin-top: 15px;
+}
+
+/* Contate-nos */
+
+.footer .footer-content .contate p {
+    font-size: 15px;
+    margin-top: 15px;
+}
+
+.footer .footer-content .contact span {
+    display: block;
+    font-size: 1.1em;
+
+    margin-top: 10px;
+}
+
+.footer .footer-bottom {
+    background-color: var(--cor-secundaria);
+    color: #808080;
+    height: 40px;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    display: flex;
+}
+
+
