--- a/site/css/menu.css
+++ b/site/css/menu.css
@@ -62,9 +62,10 @@
     border-top: 5px solid var(--cor-principal);
     background-color: var(--cor-secundaria);
     color: white;
-    height: 285px;
+    height: 265px;
     position: relative;
     z-index: -1;
+    margin-top: 100px;
 }
 
 .footer .footer-content {
