--- a/site/css/sobre.css
+++ b/site/css/sobre.css
@@ -7,7 +7,7 @@
 
 .laboratorio {
     width: 100%;
-    background: url('../img/laboratorio.jpg') center top no-repeat;
+    background: url('../img/fundosobre.jpg') center top no-repeat;
     background-size: 100%;
     height: 550px;
 }
@@ -51,5 +51,44 @@ body{
 }
 .fbody{
     background: rgba(0, 0, 0, 0.3);
-    height: 1000vh;
+}
+
+
+.imgLogo{
+    position: absolute;
+    margin-top: -150px;
+}
+
+.txtQuemE{
+    margin-bottom: 100px;
+    font-size: 30px;
+    color: white;
+}
+.txtsobre{
+    width: 610px;
+    color: white;
+    font-size: 17px;
+    padding-bottom: 100px;
+}
+.conteinerSobre{
+    padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.divCard{
+    color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.cor{
+    display: flex;
+    flex-direction: column;
+}
+.um>div{
+    
+}
+.dois>div{
+   
 }
