--- a/site/css/sobre.css
+++ b/site/css/sobre.css
@@ -5,90 +5,63 @@
     --cor-quartenaria: #0066ffff;
 }
 
+body {
+    background: url(../img/fundo3.jpg) top center no-repeat;
+    background-size: cover;
+}
+
 .laboratorio {
     width: 100%;
     background: url('../img/fundosobre.jpg') center top no-repeat;
     background-size: 100%;
-    height: 550px;
+    height: 370px;
 }
 
 .laboratorio div {
     background: rgba(0, 0, 0, 0.5);
-    height: 100%;
+    height: 97%;
     width: 100%;
     align-items: center;
     justify-content: center;
     display: flex;
 }
-.cor h1{
-    position: center;
-    box-shadow: 0 0 5em black;
-    padding: 50px;
-    border-radius: 50px;
-    background-color: rgba(253, 253, 253, 0.8);
 
-}
-.tituloMind6{
-    margin-top: 100px;
-    text-align: center;
-    color: var(--cor-secundaria);
-    font-family: 'Krona One', sans-serif;
-    font-size: 50px;
-}
-body{
-    background: url(../img/fundo3.jpg) top center no-repeat;
-    background-size: cover;
-}
-#im1{
-    transform: scaleX(1);
-}
-.carrosel div{
-    margin-left: 2.5%;
-    display: inline-block;
-    width: 30%;
-    height: 200px;
-    
-}
-.fbody{
-    background: rgba(0, 0, 0, 0.3);
-}
-
-
-.imgLogo{
-    position: absolute;
-    margin-top: -150px;
-}
-
-.txtQuemE{
-    margin-bottom: 100px;
-    font-size: 30px;
+.cor h1 {
+    text-transform: uppercase;
+    font-weight: bolder;
     color: white;
+    font-size: 100px;
+    text-shadow: 2px 2px black;
 }
-.txtsobre{
-    width: 610px;
-    color: white;
-    font-size: 17px;
-    padding-bottom: 100px;
-}
-.conteinerSobre{
-    padding-top: 50px;
+
+.info {
+    /* margin: 0px 20px 0px 20px; */
+
     display: flex;
-    flex-direction: column;
+
     justify-content: center;
-}
-.divCard{
-    color: white;
-    display: flex;
-    flex-direction: column;
+    align-items: center;
 }
 
-.cor{
-    display: flex;
-    flex-direction: column;
+.info .aboutUs {
+    width: 85%;
+    margin: 30px 0px 20px 0px;
 }
-.um>div{
-    
+
+.info .aboutUs h1 {
+    color: black;
+    text-transform: uppercase;
+
+    font-weight: bolder;
+    border-bottom: black solid 3px;
+
+    margin-bottom: 15px;
 }
-.dois>div{
-   
+
+.info .aboutUs p {
+    font-weight: bolder;
+    text-align: justify;
+
+    margin-bottom: 7px;
+    font-size: 20px;
 }
