--- a/site/css/controlTec.css
+++ b/site/css/controlTec.css
@@ -5,10 +5,11 @@
     --cor-quartenaria: #0066ffff;
 }
 
-body {
-    background: url(../img/fundo3.jpg) top center no-repeat;
-    background-size: cover;
+body{
+    font-family: 'Montserrat', sans-serif;
 }
+
+
 
 .laboratorio {
     width: 100%;
@@ -28,23 +29,96 @@ body {
 }
 
 .infoProject {
-    /* margin: 0px 20px 0px 20px; */
+  width: 100%;
+  height: 430px;
+  padding-top: 200px;
+  background: url(../img/escritorio.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+}
 
+.project1{
+    padding-top: 50px;
+}
+
+.project1 h1{
+    color: white;
+    font-size: 60px;
+}
+
+.infoProject2{
+    width: 100%;
+    height: 370px;
+    text-align: center;
     display: flex;
-
     justify-content: center;
-    align-items: center;
 }
 
-.infoProject .project {
-    width: 85%;
-    margin: 20px 0px 20px 0px;
+.project2{
+    width: 70%;
 }
 
-.infoProject .project p {
-    font-weight: bolder;
-    text-align: justify;
+.project2 h1{
+    margin-top: 60px;
+    margin-bottom: 50px;
+    font-size: 40px;
+    color: #232323;
+}
 
-    margin-bottom: 7px;
-    font-size: 20px;
+.project2 p{
+    font-size: 23px;
+    text-align: left;
+    color: #232323;
+}
+
+.infoProject3{
+    width: 100%;
+    height: 430px;
+    background-color: rgb(110, 130, 211);
+    color: white;
+    text-align: center;
+    padding-top: 70px;
+}
+
+.infoProject3 ul{
+    margin-top: 60px;
+    display: flex;
+    list-style: none;
+    text-align: center;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.infoProject3 h1{
+    font-size: 47px;
+}
+
+.infoProject3 i{
+    font-size: 100px;
+}
+
+.infoProject3 li{
+    width: 33%;
+    text-align: center;
+}
+
+.infoProject3 h3{
+    margin-top: 23px;
+}
+
+.infoProject3 p{
+    margin-top: 20px;
+    text-align: center;
+    max-width: 33%;
+    margin-left: 34%;
+}
+
+.infoProject4{
+    width: 100%;
+    height: 550px;
+    background: url(../img/tech.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
