Continuação e finalização da página .ControlTec

--- a/site/css/index.css
+++ b/site/css/index.css
@@ -73,6 +73,7 @@ body{
   height: 350px;
   background-color: rgba(255, 255, 255, 0.893);
   box-shadow: 0 0 1em black;
+  margin-bottom: 20px;
   
 }
 .mvv p{
