--- a/site/css/menu.css
+++ b/site/css/menu.css
@@ -67,7 +67,7 @@
     height: 265px;
     position: relative;
     z-index: -1;
-    margin-top: 100px;
+    /* margin-top: 100px; */
 }
 
 .footer .footer-content {
