--- a/site/css/menu.css
+++ b/site/css/menu.css
@@ -25,15 +25,21 @@
 
 .menu {
     position: fixed;
+    transition-duration: 1s;
     width: 100%;
     height: 100px;
     color: white;
-    background: var(--cor-secundaria);
-    border-bottom: 5px solid var(--cor-principal);
     z-index: 1;
-
 }
 
+.bgMenu {
+    background-color: #232323;
+    width: 100%;
+    height: 0;
+    z-index: -1;
+    position: absolute;
+    transition-duration: 1s;
+}
 .menu ul {
     display: flex;
     width: 100%;
@@ -41,8 +47,8 @@
     justify-content: center;
     list-style: none;
     align-items: center;
-
 }
+
 
 .menu a {
     text-decoration: none;
@@ -51,6 +57,10 @@
     text-transform: uppercase;
     padding: 20px;
     font-family: 'Krona One', sans-serif;
+}
+.menu ul li {
+    padding: 0 0;
+    transition-duration: 1s;
 }
 
 .hover a:hover {
@@ -67,7 +77,6 @@
     height: 265px;
     position: relative;
     z-index: -1;
-    /* margin-top: 100px; */
 }
 
 .footer .footer-content {
@@ -142,4 +151,22 @@
     bottom: 0px;
     left: 0px;
     display: flex;
+}
+
+@keyframes anm-before {
+    0%{
+        height: 0px;
+    }
+    100%{
+        height: 100px;
+    }
+}
+
+@keyframes anm-not-before {
+    0%{
+        height: 100px;
+    }
+    100%{
+        height: 0px;
+    }
 }
