--- a/site/css/sobre.css
+++ b/site/css/sobre.css
@@ -7,11 +7,6 @@
     --cor-quartenaria: #0066ffff;
 }
 
-body {
-    background: url(../img/fundo3.jpg) top center no-repeat;
-    background-size: cover;
-}
-
 * {
     font-family: 'Comfortaa', cursive;
 }
@@ -21,12 +16,14 @@ body {
     width: 100%;
     background: url('../img/fundosobre.jpg') center top no-repeat;
     background-size: 100%;
-    height: 370px;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 470px;
 }
 
 .laboratorio div {
     background: rgba(0, 0, 0, 0.5);
-    height: 97%;
+    height: 100%;
     width: 100%;
     align-items: center;
     justify-content: center;
