--- a/site/css/controlTec.css
+++ b/site/css/controlTec.css
@@ -30,7 +30,7 @@ body {
 
 .infoProject {
     width: 100%;
-    height: 430px;
+    height: 458px;
     padding-top: 200px;
     background: url(../img/escritorio.jpg);
     background-repeat: no-repeat;
@@ -76,7 +76,7 @@ body {
 .infoProject3 {
     width: 100%;
     height: 430px;
-    background-color: var(--cor-quartenaria);
+    background-color: #313336;
     color: white;
     text-align: center;
     padding-top: 70px;
@@ -137,10 +137,10 @@ body {
 #vantagens h1.title {
     text-align: center;
     font-size: 48px;
-
+    padding-top: 16px;
     color: white;
     text-shadow: 2px 2px black;
-    margin: 20px auto 15px auto;
+    margin: 0 auto 15px auto;
 }
 
 .project4 {
