--- a/site/css/index.css
+++ b/site/css/index.css
@@ -4,18 +4,28 @@
     --cor-terciaria: #8080ff;
     --cor-quartenaria: #0066ffff;
 }
+* {
+    font-family: 'Montserrat', sans-serif;
+}
 
 .laboratorio {
     width: 100%;
     background: url('../img/laboratorio.jpg') center top no-repeat;
     background-size: 100%;
     background-attachment: fixed;
-    height: 630px;
+    height: 658px;
 }
+
+    .fbody{
+        background: url(../img/tech2.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        
+    }
 
 .laboratorio div {
     background: rgba(0, 0, 0, 0.5);
-    height: 78%;
+    height: 518px;
     width: 100%;
     text-align: center;
 }
@@ -26,10 +36,9 @@
     padding-top: 140px;
 }
 .cor h1{
-    margin-top: 50px;
-    font-size: 60px;
+    margin-top: 106px;
+    font-size: 51px;
     color: white;
-    text-transform: uppercase;
 }
 
 .cor button{
@@ -46,10 +55,11 @@
 }
 
 .tituloMind6{
-    margin-top: 100px;
+    margin-top: 33px;
+    margin-bottom: 23px;
+
     text-align: center;
     color: var(--cor-secundaria);
-    font-family: 'Krona One', sans-serif;
     font-size: 50px;
 }
 
@@ -93,7 +103,7 @@
 }
 .subtitulo{
     color:#232323;
-    font-size: 30px;
+    font-size: 27px;
     padding-bottom: 20px;
 }
 .control{
