--- a/site/css/sobre.css
+++ b/site/css/sobre.css
@@ -8,7 +8,7 @@
 }
 
 * {
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Montserrat', sans-serif;
 }
 
 
@@ -32,7 +32,6 @@
 
 .cor h1 {
     text-transform: uppercase;
-    font-weight: bolder;
     color: white;
     font-size: 100px;
     text-shadow: 2px 2px black;
@@ -41,33 +40,35 @@
 .info {
     /* margin: 0px 20px 0px 20px; */
 
-    display: flex;
 
     justify-content: center;
     align-items: center;
 }
 
 .info .aboutUs {
-    width: 85%;
+    width: 100%;
     margin: 30px 0px 20px 0px;
 }
 
 .info .aboutUs h1 {
     color: black;
     text-transform: uppercase;
-
-    font-weight: bolder;
-    border-bottom: black solid 3px;
+    text-align: center;
 
     margin-bottom: 15px;
 }
 
-.info .aboutUs p {
-    font-weight: bolder;
-    text-align: justify;
+.aboutUs__p {
+    
+        width: 100%;
+        display: flex;
+        justify-content: center;
 
-    margin-bottom: 7px;
-    font-size: 20px;
+}
+.aboutUs__p p{
+    font-size: 23px;
+    color: #232323;
+    width: 70%;
 }
 
 .cardsTeam {
@@ -75,13 +76,20 @@
     width: 90%;
     margin: auto;
 }
+#Team {
+    padding-top: 11px;
+    background-color: #3b3d3d;
+}
 
+.team a{
+
+
+}
 #Team h1.title {
     text-align: center;
     font-size: 48px;
-
-    color: var(--cor-principal);
-    margin: 20px auto 15px auto;
+    color: #0066ff;
+    margin: 20px 15px;
 }
 
 .cardsTeam {
@@ -95,7 +103,7 @@
     margin: 25px 10px;
     height: 455px;
 
-    background-color: rgba(136, 136, 136, 0.514);
+    background-color:#666666;
 }
 
 .card img {
@@ -112,7 +120,7 @@
 }
 
 .card p {
-    font-weight: bolder;
+   
 }
 
 .card a i {
@@ -122,14 +130,7 @@
     margin-top: 5px;
 }
 
-.card .fa-instagram::before{
-    color: var(--cor-principal);
+.card i{
+    color: #f2f2f2;
 }
 
-.card .fa-linkedin-in::before{
-    color: var(--cor-principal);
-}
-
-.card .fa-github::before{
-    color: var(--cor-principal);
-}
