--- a/site/css/index.css
+++ b/site/css/index.css
@@ -4,9 +4,10 @@
     --cor-terciaria: #8080ff;
     --cor-quartenaria: #0066ffff;
 }
-* {
-    font-family: 'Montserrat', sans-serif;
+body {
+    overflow-x: hidden;
 }
+
 
 .laboratorio {
     width: 100%;
@@ -15,13 +16,12 @@
     background-attachment: fixed;
     height: 658px;
 }
+.fbody{
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
-    .fbody{
-        background: url(../img/tech2.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        
-    }
+
 
 .laboratorio div {
     background: rgba(0, 0, 0, 0.5);
@@ -54,9 +54,13 @@
     font-weight: bold;
 }
 
+.content {
+    margin-bottom: 5%;
+    margin-top: 3%;
+}
+
+
 .tituloMind6{
-    margin-top: 33px;
-    margin-bottom: 23px;
 
     text-align: center;
     color: var(--cor-secundaria);
@@ -73,34 +77,7 @@
     height: 200px;
     
 }
-.mvv{
-  display: inline-block;
-  margin-left: 10%;
-  width: 20%;
-  height: 350px;
-  background-color: rgba(255, 255, 255, 0.893);
-  box-shadow: 0 0 1em black;
-  margin-bottom: 20px;
-  
-}
-.mvv p{
-    padding: 10px;
-    color: black;
-    font-size: 22px;
-    text-transform: uppercase;
-    
-}
-.mvv img{
-    margin-left: 35%;
-    margin-top: 10px;
-}
-.mvv h3{
-    margin: 0;
-    padding: 0 15px;
-    text-align: justify;
-    color: black;
 
-}
 .subtitulo{
     color:#232323;
     font-size: 27px;
