--- a/site/css/menu.css
+++ b/site/css/menu.css
@@ -3,7 +3,22 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat', sans-serif;
+}
+*::selection {
+    background-color: var(--cor-quartenaria);
+}
+a {
+    text-decoration: none;
+    color: #000;
+}
 
+a:hover {
+    color: var(--cor-principal);
+}
+
+input {
+    outline: none;
 }
 
 :root {
