--- a/site/css/sobre.css
+++ b/site/css/sobre.css
@@ -71,6 +71,39 @@
     width: 70%;
 }
 
+/*
+Missão  Visão e Valores
+*/
+
+.mvv{
+  display: inline-block;
+  margin-left: 10%;
+  width: 20%;
+  height: 350px;
+  background-color: rgba(255, 255, 255, 0.893);
+  box-shadow: 0 0 1em black;
+  margin-bottom: 20px;
+  
+}
+.mvv p{
+    padding: 10px;
+    color: black;
+    font-size: 22px;
+    text-transform: uppercase;
+    
+}
+.mvv img{
+    margin-left: 35%;
+    margin-top: 10px;
+}
+.mvv h3{
+    margin: 0;
+    padding: 0 15px;
+    text-align: justify;
+    color: black;
+
+}
+
 .cardsTeam {
     text-align: center;
     width: 90%;
