--- a/site/css/menu.css
+++ b/site/css/menu.css
@@ -8,6 +8,9 @@
 *::selection {
     background-color: var(--cor-quartenaria);
 }
+h1, h2, h3 {
+    margin: 0;
+}
 a {
     text-decoration: none;
     color: #000;
