--- a/site/css/contato.css
+++ b/site/css/contato.css
@@ -4,6 +4,10 @@
     --cor-terciaria: #8080ffff;
     --cor-quartenaria: #0066ffff;
 }
+body {
+    background-color: #4F4F4F;
+    color: white;
+}
 .container_form {
     display: flex;
     align-items: center;
@@ -34,13 +38,15 @@
 }
 
 form {
-    background-color: rgba(136, 136, 136, 0.514);
+    background-color: var(--cor-secundaria);
 
 
     padding: 116px 64px;
+    margin: 10vh 0;
 
     border-radius: 8px;
-    width: 40%;
+    width: 60%;
+    color: white;
 }
 
 form h1 {
@@ -65,12 +71,15 @@ form legend {
     width: 100%;
 }
 
+form .fields {
+    display: flex;
+    align-items: center;
+}
+
 form .field {
     flex: 1;
     display: flex;
     flex-direction: column;
-
-    margin-bottom: 24px;
 }
 
 form .field-group {
@@ -79,18 +88,41 @@ form .field-group {
 
 form input,
 form select {
-    background-color: #ffffff;
-
-    border: 0;
-    padding: 16px 24px;
-    font-size: 16px;
-    height: 0.5vh;
-
-    border-radius: 8px;
+    height: 30px;
+    font-size: 20px;
+    padding-left: 10px;
+    border-color: var(--cor-quartenaria);
+    border-radius: 4px;
+    background-color: rgb(243, 251, 253);
+    color: var(--cor-quartenaria);
 }
 
 form textarea {
     font-size: 16px;
+    height: 100%;
+    max-width: 535px;   
+    outline: none;
+    border-color: var(--cor-quartenaria);
+    border-radius: 4px;
+    background-color: rgb(243, 251, 253);
+    color: var(--cor-quartenaria);
+    padding: 10px;
+}
+
+form textarea::selection {
+    color: #000;
+}
+
+form .text-field {
+    margin-left: 60px;
+    height: 100%;
+}
+
+form .inputs-fields {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 50%;
 }
 
 form select {
@@ -111,23 +143,38 @@ form .field-group .field+.field {
 }
 
 form button {
-    width: 260px;
-    height: 56px;
-
-    background-color: var(--cor-principal);
-    border-radius: 8px;
-
-    color: rgb(0, 0, 0);
+    width: 50%;
+    height: 5vh;
     font-weight: bold;
-    font-size: 16px;
-
-    border: 0;
-    margin-top: 40px;
-
-    transition: 400ms;
+    border: 3px solid var(--cor-quartenaria);
+    position: relative;
+    transition-duration:.5s;
+    border-radius: 8px;
     cursor: pointer;
+    color: var(--cor-quartenaria);
+    margin-top: 2vh;
+    align-self: center;
+    background-color: #FFF;
 }
 
+form button::before {
+    content: '';
+    width: 100%;
+    height: 0;
+    position: absolute;
+    transition-duration: .5s;
+    border-radius: 3px;
+    z-index: -1;
+    left: 0;
+    top: 0;
+    background: var(--cor-quartenaria);
+}
 form button:hover {
-    background-color: var(--cor-quartenaria);
+    transform: scale(1.2);
+    border: 3px solid #000;
+    color: #000;
+}
+form button:hover::before {
+    transition-duration: .5s;
+    height: 4vh;
 }
