--- a/site/css/login.css
+++ b/site/css/login.css
@@ -7,6 +7,7 @@
     justify-content: center;
     background-repeat: no-repeat;
     background-size: cover;
+    color: #FFF;
 }
 
 .img-container {
@@ -26,9 +27,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #FFF;
+    background-color: var(--cor-secundaria);
     animation-name: kick;
-    animation-duration: 4s;
+    animation-duration: 3s;
 }
 
 .box-login form {
@@ -48,7 +49,7 @@
     padding-left: 10px;
     border-color: var(--cor-quartenaria);
     border-radius: 4px;
-    background-color: rgb(235, 251, 255);
+    background-color: rgb(243, 251, 253);
     color: var(--cor-quartenaria);
 }
 .box-login form .div-btn {
@@ -61,23 +62,24 @@
 .box-login form .div-btn button {
     width: 10vw;
     height: 5vh;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: var(--cor-quartenaria);
     font-weight: bold;
     border: none;
     position: relative;
     transition-duration:.5s;
     border-radius: 8px;
     cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: #FFF;
+    border: 3px solid var(--cor-quartenaria);
 }
 
 .box-login form .div-btn button::before {
     content: '';
-    width: 10vw;
+    width: 9.6vw;
     height: 0;
     position: absolute;
     transition-duration: .5s;
-    border-radius: 8px;
+    border-radius: 4px;
     z-index: -1;
     left: 0;
     top: 0;
@@ -86,11 +88,14 @@
 
 .box-login form .div-btn button:hover {
     transform: scale(1.2);
+    color: black;
+    border-color: #000;
 }
 
 .box-login form .div-btn button:hover::before {
     transition-duration: .5s;
-    height: 5vh;
+    transform: translateY(-1px);
+    height: 4.24vh;
 }
 
 .box-login form .link-passwd {
@@ -98,9 +103,12 @@
     animation-duration: 4s;
     transition-duration: 1s;
     font-size: 1em;
+    color: #FFF;
+    width: fit-content;
 }
 .box-login form .link-passwd:hover {
-    transform: scale(1.2) translateX(40px);
+    transform: scale(1.2) translateX(10px);
+    color: var(--cor-quartenaria);
 }
 
 @keyframes kick {
