--- a/site/css/menu.css
+++ b/site/css/menu.css
@@ -32,14 +32,6 @@ input {
 
 }
 
-.logo {
-    padding: 0 20px;
-
-}
-
-.logo img {
-    width: 60px;
-}
 
 .menu {
     position: fixed;
@@ -59,12 +51,17 @@ input {
     transition-duration: 1s;
 }
 .menu ul {
-    display: flex;
-    width: 100%;
-    height: 100%;
+    display: grid;
+    grid-template-columns: 15vw 15vw 15vw 15vw 15vw;
     justify-content: center;
-    list-style: none;
     align-items: center;
+    width: 100%;
+    height: 100%;   
+    list-style: none;
+}
+
+.menu .logo {
+    width: 60px;
 }
 
 
@@ -77,8 +74,23 @@ input {
     font-family: 'Krona One', sans-serif;
 }
 .menu ul li {
-    padding: 0 0;
     transition-duration: 1s;
+    width: 200px;
+    animation-name: anm-links;
+    animation-duration: 0.5s;
+}
+.menu ul li:nth-child(2) {
+    animation-duration: 1s;
+}
+.menu ul li:nth-child(3) {
+    animation-duration: 1.5s;
+}
+.menu ul li:nth-child(4) {
+    animation-duration: 2s;
+}
+.menu ul li:nth-child(5)  {
+    margin-left: 4vw;
+    animation-duration: 2.5s;
 }
 
 .hover a:hover {
@@ -169,6 +181,17 @@ input {
     bottom: 0px;
     left: 0px;
     display: flex;
+}
+@keyframes anm-links {
+    0% {
+        opacity: 0%;
+    }
+    50%{
+        opacity: 0%;
+    }
+    100% {
+        opacity: 100%;
+    }
 }
 
 @keyframes anm-before {
