--- a/site/css/menu.css
+++ b/site/css/menu.css
@@ -51,11 +51,11 @@ input {
     transition-duration: 1s;
 }
 .menu ul {
-    display: grid;
-    grid-template-columns: 15vw 15vw 15vw 15vw 15vw 15vw;
-    justify-content: center;
+    display: flex;  
+    justify-content: space-around;
     align-items: center;
-    width: 100%;
+    margin: 0 auto;
+    width: 70%;
     height: 100%;   
     list-style: none;
 }
@@ -66,6 +66,7 @@ input {
 
 
 .menu a {
+    padding: 15px;
     text-decoration: none;
     color: white;
     font-size: 15px;
