--- a/site/css/index.css
+++ b/site/css/index.css
@@ -111,3 +111,44 @@ body {
     text-align: center;
 }
 
+.infoProject3 {
+    width: 100%;
+    height: 430px;
+    background-color: #313336;
+    color: white;
+    text-align: center;
+    padding-top: 70px;
+}
+
+.infoProject3 ul {
+    margin-top: 60px;
+    display: flex;
+    list-style: none;
+    text-align: center;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.infoProject3 h1 {
+    font-size: 47px;
+}
+
+.infoProject3 i {
+    font-size: 100px;
+}
+
+.infoProject3 li {
+    width: 33%;
+    text-align: center;
+}
+
+.infoProject3 h3 {
+    margin-top: 23px;
+}
+
+.infoProject3 p {
+    margin-top: 20px;
+    text-align: center;
+    max-width: 33%;
+    margin-left: 34%;
+}
