--- a/site_institucional/css/menu.css
+++ b/site_institucional/css/menu.css
@@ -78,7 +78,7 @@ input {
     animation-name: anm-links;
     animation-duration: 0.5s;
 }
-.menu ul li:nth-child(2) {
+.menu ul li:nth-child(2 ) {
     animation-duration: 1s;
 }
 .menu ul li:nth-child(3) {
@@ -89,6 +89,10 @@ input {
 }
 .menu ul li:nth-child(5)  {
     animation-duration: 2.5s;
+}
+
+.menu ul li:nth-child(6)  {
+    animation-duration: 3s;
 }
 
 .hover a:hover {
