--- a/Sites/Dashboard/css/machines.css
+++ b/Sites/Dashboard/css/machines.css
@@ -16,18 +16,55 @@
     border-radius: 8px;
 
     display: flex;
+    flex-wrap: wrap;
+
+    overflow-y: scroll;
     
-    padding: 20px;
     margin-bottom: 20px;
 }
 
 .machines__box-machines__machine {
     cursor: pointer;
     transition-duration: .5s;
+    margin: 10px;
 }
 
 .machines__box-machines__machine:active {
     transform: scale(0.9);
+}
+
+
+
+.machine__btn-dash {
+    width: 200px;
+    height: 50px;
+    
+    border: 5px solid blue;
+    border-radius: 5px;
+
+    background-color: black;
+
+    color: white;
+    font-size: 1em;
+    font-weight: bold;
+
+    transition-duration: .5s;
+
+    cursor: pointer;
+
+    margin-bottom: 10px;
+
+    display: none;
+}
+.machine__btn-dash:hover {
+    background-color: white;
+    color: black;
+}
+.machine__btn-dash:active {
+    transform: scale(0.9);
+    background-color: blue;
+    border-color: black;
+    color: black;
 }
 
 .machines__box-machines__machine__icon {
