--- a/Sites/Dashboard/css/menu.css
+++ b/Sites/Dashboard/css/menu.css
@@ -58,6 +58,7 @@ ul.links-list li {
 
 
 
+
 .home__logo {
     width: 30vw;
     filter: opacity(0.7);
@@ -137,7 +138,9 @@ p.link {
 .back-icons-menu ul.links-list li:hover {
     background: #0000F2;
 }
-
+.selected {
+    background: #0000F2 !important; 
+}
 .fa-laptop,
 .fa-chart-line,
 .fa-file-contract,
@@ -205,4 +208,17 @@ li.contact-list__contact {
 
 .myButton:active {
     transform: scale(0.9);
+}
+
+.dashboard__return-btn {
+    font-size: 30px;
+    
+    top: 10px;
+    left: 0px;
+    
+    margin: 30px;
+    
+    cursor: pointer;
+    
+    position: absolute;
 }
