--- a/Sites/Dashboard/css/menu.css
+++ b/Sites/Dashboard/css/menu.css
@@ -31,24 +31,13 @@ ul.links-list li {
     align-items: center;
 }
 
-.container {
-    position: relative;
-    height: 100%;
-    width: 80%;
-    left: 300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
 .page {
     position: relative;
     
     height: 100%;
-    width: 80%;
+    width: 85%;
 
-    left: 300px;
+    left: 250px;
 
     display: flex;
     align-items: center;
@@ -72,13 +61,19 @@ ul.links-list li {
     align-items: center;
 
     height: 100%;
-    width: 300px;
+    width: 20vw;
 
     left: 0px;
 
     border-right: 3px solid black;
 
     background-color: rgb(0, 0, 0);
+}
+button[type="checkbox"] {
+    display: none;
+}
+button[type="checkbox"]:checked .menu{
+    left: 0;
 }
 
 .logo {
@@ -97,7 +92,7 @@ ul.links-list li {
 }
 
 .line {
-    width: 200px;
+    width: 17vw;
     height: 3px;
 
     border: 0;
@@ -110,8 +105,8 @@ ul.links-list li {
 }
 
 .back-icons-menu ul.links-list li {
-    width: 50px;
-    height: 50px;
+    width: 5vw;
+    height: 5vw;
 
     margin: 10px 10px;
 
@@ -162,7 +157,7 @@ ul.links-list .icons-links a {
 }
 
 .line2 {
-    width: 200px;
+    width: 17vw;
     height: 3px;
 
     border: 0;
@@ -172,7 +167,9 @@ ul.links-list .icons-links a {
 
 .contact-shapes {
     display: flex;
-    width: 160px;
+    justify-content: center;
+    width: 16vw;
+    font-size: 1.5vw;
 }
 
 li.contact-list__contact {
@@ -221,4 +218,18 @@ li.contact-list__contact {
     cursor: pointer;
     
     position: absolute;
+}
+
+@media (max-width: 768px) {
+    .menu {
+        display: none;
+        position: absolute;
+    }
+    .menu__btn {
+        display: block;
+    }
+    .page {
+        width: 100%;
+        left: 0;
+    }
 }
