Adicionando responsividade do menu no site do client

--- a/Sites/Dashboard/css/rooms.css
+++ b/Sites/Dashboard/css/rooms.css
@@ -11,6 +11,8 @@
     align-items: center;    
 
     overflow-y: scroll;
+
+    background-color: rgb(15, 15, 15);
 }
 
 .box-rooms::-webkit-scrollbar {
