--- a/Sites/Dashboard/css/menu.css
+++ b/Sites/Dashboard/css/menu.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
+html,
 body {
     height: 100vh;
     width: 100vw;
@@ -60,21 +60,66 @@ ul.links-list li {
     flex-direction: column;
     align-items: center;
 
+    overflow-x: hidden;
+
     height: 100%;
     width: 20vw;
 
+    padding: 40px 0px;
     left: 0px;
 
     border-right: 3px solid black;
 
     background-color: rgb(0, 0, 0);
+
+    transition: .5s;
+
 }
-button[type="checkbox"] {
+.menu::-webkit-scrollbar {
+    background-color: rgba(65, 65, 65, 0.568);
+    width: 3px;
+}
+
+.menu::-webkit-scrollbar-thumb {
+    background-color: blue;
+}
+
+.menu__btn {
     display: none;
+    border: none;
+    background-color: transparent;
 }
-button[type="checkbox"]:checked .menu{
-    left: 0;
+.menu__btn-open {
+    font-size: 40px;
+
+    position: absolute;
+
+    right: 20px;
+    top: 20px;
+    
+    transition: .5s;
 }
+
+.menu__btn-open:active {
+    transform: scale(0.8);
+}
+
+.menu__btn-close {
+    color: white;
+    
+    position: absolute;
+    
+    top: 10px;
+    right: 20px;
+    
+    font-size: 30px;
+
+    transition: .5s;
+}
+.menu__btn-close:active {
+    transform: scale(0.8);
+}
+
 
 .logo {
     margin-top: 15px;
@@ -102,6 +147,7 @@ button[type="checkbox"]:checked .menu{
 
 .back-icons-menu ul.links-list {
     text-align: center;
+    margin-left: 30px;
 }
 
 .back-icons-menu ul.links-list li {
@@ -149,11 +195,12 @@ p.link {
     align-items: center;
 
     margin-right: 50px;
+
+    font-size: 20px;
 }
 
 ul.links-list .icons-links a {
     text-decoration: none;
-
 }
 
 .line2 {
@@ -168,13 +215,35 @@ ul.links-list .icons-links a {
 .contact-shapes {
     display: flex;
     justify-content: center;
-    width: 16vw;
+    flex-direction: column;
+    
     font-size: 1.5vw;
 }
-
-li.contact-list__contact {
+.contact-list__contact {
     margin-bottom: 10px;
+    
     color: white;
+    
+    list-style: none;
+    
+    text-align: center;
+    font-size: 20px;
+    
+    cursor: pointer;
+    
+    transition: .5s;
+}
+.contact-list__contact:active {
+    transform: scale(0.9);
+}
+.contact-list__contact::selection {
+
+}
+.contact-shapes__title {
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    border-bottom: 3px solid white;
 }
 
 .myButton {
@@ -219,12 +288,17 @@ li.contact-list__contact {
     
     position: absolute;
 }
-
 @media (max-width: 768px) {
     .menu {
-        display: none;
-        position: absolute;
-    }
+        left: -1000px;
+
+        width: 100%;
+        height: 100%;
+        
+        position: fixed;
+        
+        z-index: 10;
+    }   
     .menu__btn {
         display: block;
     }
@@ -232,4 +306,21 @@ li.contact-list__contact {
         width: 100%;
         left: 0;
     }
+    .back-icons-menu ul.links-list li {
+        width: 60px;
+        height: 60px;
+    }
+    .logo {
+        width: 50vw;
+    }
+    .line,
+    .line2 {
+        width: 80vw;
+    }
+
+    .contact-list__contact {
+        font-size: 30px;
+    }
 }
+
+
