--- a/Sites/Dashboard/css/dashboard.css
+++ b/Sites/Dashboard/css/dashboard.css
@@ -129,7 +129,7 @@
 
 .dashboard__heat-map__motherboard {
     position: absolute;
-    width: 500px;
+    width: 35vw;
     margin-top: 50px;
 }
 
@@ -137,7 +137,9 @@
     margin-top: 10px;
 }
 
-.dashboard__heat-map__print-heat {
+#heatMap {
     position: absolute;
     z-index: 2;
+    height: 85vh;
+    width: 55vw;
 }
