--- a/Sites/Dashboard/css/machines.css
+++ b/Sites/Dashboard/css/machines.css
@@ -3,7 +3,8 @@
 }
 
 .machines__title {
-    font-size: 3em;
+    font-size: 4vw;
+    margin: 30px 0px;
 }
 
 .machines__box-machines {
@@ -25,7 +26,7 @@
 
 .machines__box-machines__machine {
     cursor: pointer;
-    transition-duration: .5s;
+    transition-duration: .2s;
     margin: 10px;
 }
 
@@ -62,12 +63,6 @@
     background: #0952e2;
 }
 
-/* .machine__btn-dash:active {
-    transform: scale(0.9);
-    background-color: blue;
-    border-color: black;
-    color: black;
-} */
 
 .machines__box-machines__machine__icon {
     font-size: 100px;
@@ -80,8 +75,7 @@
 /* Relatorios */
 
 .machines__reports__selectors {
-    width: 60vw;
-    height: 10vh;
+    height: 7vh;
 
     display: flex;
     justify-content: space-around;
@@ -103,15 +97,15 @@
 
 .machines__reports__box-reports {
     height: 80vh;
-    width: 60vw;
+    width: 80%;
 
     background-color: white;
 
-    /* border: 2px solid black;
-    border-radius: 8px; */
     margin: 20px;
 
     overflow-y: scroll;
+
+    min-width: 300px;
 }
 
 .machines__reports__box-reports__table-reports {
@@ -119,12 +113,16 @@
     border-spacing: 5px;
 
     width: 100%;
+
+    margin: 0 auto;
 }
 
 th {
     text-align: center;
     background-color: rgb(0, 0, 0);
     color: white;
+    padding: 0;
+    width: 10px!important;
 }
 
 td,
@@ -135,4 +133,12 @@ th {
 
 tr:nth-child(even) {
     background-color: #f2f2f2;
+}
+
+@media (max-width: 868px) {
+    .machines__reports__selectors {
+        flex-direction: column;
+        justify-content: space-around;
+        height: 7vh;
+    }
 }
