Correção de cores e posicionamento de elemntos

--- a/Sites/site_institucional/css/controlTec.css
+++ b/Sites/site_institucional/css/controlTec.css
@@ -1,8 +1,8 @@
 :root {
     --cor-principal: #0f0fd8;
-    --cor-secundaria: #232323;
-    --cor-terciaria: #8080ffff;
-    --cor-quartenaria: #0066ffff;
+    --cor-secundaria: #1B2431;
+    --cor-terciaria: #016795;
+    --cor-quartenaria: #1E488F;
 }
 
 body {
