--- a/Sites/site_institucional/css/menu.css
+++ b/Sites/site_institucional/css/menu.css
@@ -5,12 +5,17 @@
     padding: 0;
     font-family: 'Montserrat', sans-serif;
 }
+
 *::selection {
     background-color: var(--cor-quartenaria);
 }
-h1, h2, h3 {
+
+h1,
+h2,
+h3 {
     margin: 0;
 }
+
 a {
     text-decoration: none;
     color: #000;
@@ -26,10 +31,9 @@ input {
 
 :root {
     --cor-principal: #0f0fd8;
-    --cor-secundaria: #232323;
-    --cor-terciaria: #8080ffff;
-    --cor-quartenaria: #0066ffff;
-
+    --cor-secundaria: #1B2431;
+    --cor-terciaria: #016795;
+    --cor-quartenaria: #1E488F;
 }
 
 
@@ -43,20 +47,21 @@ input {
 }
 
 .bgMenu {
-    background-color: #232323;
+    background-color: #1B2431;
     width: 100%;
     height: 0;
     z-index: -1;
     position: absolute;
     transition-duration: 1s;
 }
+
 .menu ul {
-    display: flex;  
+    display: flex;
     justify-content: space-around;
     align-items: center;
     margin: 0 auto;
     width: 70%;
-    height: 100%;   
+    height: 100%;
     list-style: none;
 }
 
@@ -73,25 +78,30 @@ input {
     text-transform: uppercase;
     font-family: 'Krona One', sans-serif;
 }
+
 .menu ul li {
     transition-duration: 1s;
     animation-name: anm-links;
     animation-duration: 0.5s;
 }
-.menu ul li:nth-child(2 ) {
+
+.menu ul li:nth-child(2) {
     animation-duration: 1s;
 }
+
 .menu ul li:nth-child(3) {
     animation-duration: 1.5s;
 }
+
 .menu ul li:nth-child(4) {
     animation-duration: 2s;
 }
-.menu ul li:nth-child(5)  {
+
+.menu ul li:nth-child(5) {
     animation-duration: 2.5s;
 }
 
-.menu ul li:nth-child(6)  {
+.menu ul li:nth-child(6) {
     animation-duration: 3s;
 }
 
@@ -103,7 +113,7 @@ input {
 
 /*Footer (Rodapé)*/
 .footer {
-    border-top: 5px solid var(--cor-principal);
+    border-top: 5px solid var(--cor-terciaria);
     background-color: var(--cor-secundaria);
     color: white;
     height: 265px;
@@ -184,32 +194,37 @@ input {
     left: 0px;
     display: flex;
 }
+
 @keyframes anm-links {
     0% {
         opacity: 0%;
     }
-    50%{
+
+    50% {
         opacity: 0%;
     }
+
     100% {
         opacity: 100%;
     }
 }
 
 @keyframes anm-before {
-    0%{
+    0% {
         height: 0px;
     }
-    100%{
+
+    100% {
         height: 100px;
     }
 }
 
 @keyframes anm-not-before {
-    0%{
+    0% {
         height: 100px;
     }
-    100%{
+
+    100% {
         height: 0px;
     }
 }
